# PalindromLab

./: CMakeLists.txt  README.md
src/: main.cpp  palindrom.cpp  palindrom.h
test/: test_palindrom.cpp
